tests/e2e/argocd-tests/02-ingress.yaml
# Delete previous cluster
apiVersion: kudo.dev/v1alpha1
kind: TestStep
delete:
- apiVersion: argoproj.io/v1alpha1
  kind: ArgoCD
  name: example-argocd
---
apiVersion: argoproj.io/v1alpha1
kind: ArgoCD
metadata:
  name: example-argocd
  labels:
    example: ingress
spec:
  ingress:
    enabled: true
  server:
    insecure: true
