tests/e2e/argocd-tests/00-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-operator
status:
  readyReplicas: 1
