tests/e2e/argocd-tests/02-assert.yaml
apiVersion: argoproj.io/v1alpha1
kind: ArgoCD
metadata:
  name: example-argocd
status:
  phase: Available
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-argocd-server
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-argocd-grpc
